# fillerbuster

./: .gitignore  CONTRIBUTING.md  README.md  fillerbuster.code-workspace  pyproject.toml
docs/: EXPERIMENTS.md  TRAIN.md
fillerbuster/configs/: ablations.py  base.py  methods.py  nerfstudio_methods.py  prompts.py
fillerbuster/data/: datamanager.py  pixel_samplers.py
fillerbuster/data/dataparsers/: colmap_dataparser.py  nerfstudio_dataparser.py  scannetpp_dataparser.py
fillerbuster/data/datasets/: base_dataset.py  dataset_io_utils.py  dataset_transforms.py  fillerbuster_data.py  image_dataset.py  multi_dataset.py  multi_view_dataset.py  nerfstudio_dataset.py  scannetpp_dataset.py  shutterstock3d_dataset.py
fillerbuster/losses/: vae_loss.py
fillerbuster/models/: attention.py  attention_processor.py  clip_encoder.py  discriminator.py  embeddings.py  fillerbuster_inpainter.py  nerfiller_inpainter.py  schedulers.py  transformer_2d.py  vae.py
fillerbuster/pipelines/: base_pipeline.py  image_vae_pipeline.py  nerfstudio_inpaint_pipeline.py  nerfstudio_input_dataset.py  nerfstudio_model.py  pipeline_functions.py  pose_vae_pipeline.py  transformer_pipeline.py
fillerbuster/scripts/: run_calibrated_flythrough.py  run_calibrated_scene_completion.py  run_uncalibrated_scene_completion.py
fillerbuster/scripts/cluster/: dist_run.sh  slurm.py
fillerbuster/scripts/experiments/: README.md  launch_calibrated_scene_completion_nerfbusters.sh  launch_calibrated_scene_completion_nerfiller.sh  slurm_calibrated_scene_completion.sh
fillerbuster/scripts/nerfstudio/: render.py
fillerbuster/scripts/pipeline/: eval.py  train.py
fillerbuster/utils/: camera.py  camera_path_utils.py  camera_utils.py  change_modules.py  dist_utils.py  mask_utils.py  module_utils.py  nerfstudio_dataset_utils.py  normal_utils.py  random_utils.py  scheduler_utils.py  util.py  visualization_utils.py
notebooks/: assets.ipynb  completing.ipynb  nerfbusters-metrics.ipynb  nerfiller-metrics.ipynb  pose.ipynb  tables.ipynb
